feature: User Invite

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -755,6 +755,60 @@
       "saveSuccess": "Settings saved successfully",
       "saveError": "Failed to save settings"
     },
+    "users": {
+      "title": "User Management",
+      "subtitle": "Manage team members and invitations",
+      "teamMembers": "Team Members",
+      "activeUsers": "Active Users",
+      "pendingInvitations": "Pending Invitations",
+      "inviteUser": "Invite User",
+      "inviteNewUser": "Invite New User",
+      "sendInvitation": "Send Invitation",
+      "email": "Email",
+      "emailPlaceholder": "user@example.com",
+      "role": "Role",
+      "roleDescription": "Select the role for this user",
+      "roles": {
+        "viewer": "Viewer - Read-only access",
+        "editor": "Editor - Can edit themes",
+        "admin": "Administrator - Can manage most settings",
+        "owner": "Owner - Full access"
+      },
+      "slotsRemaining": "slots remaining",
+      "slotRemaining": "slot remaining",
+      "user": "User",
+      "joined": "Joined",
+      "lastLogin": "Last Login",
+      "actions": "Actions",
+      "removeUser": "Remove user",
+      "cancelInvitation": "Cancel invitation",
+      "resendInvitation": "Resend invitation",
+      "status": "Status",
+      "expires": "Expires",
+      "noUsers": "No users found",
+      "noInvitations": "No pending invitations",
+      "invitationSent": "Invitation sent successfully",
+      "invitationResent": "Invitation resent successfully",
+      "userRemoved": "User removed successfully",
+      "invitationCancelled": "Invitation cancelled successfully",
+      "errors": {
+        "insufficientPermissions": "Insufficient permissions",
+        "userLimitReached": "User limit reached",
+        "emailAlreadyExists": "Email already exists",
+        "invalidEmail": "Invalid email format",
+        "invalidRole": "Invalid role",
+        "failedToInvite": "Failed to send invitation",
+        "failedToResend": "Failed to resend invitation",
+        "failedToRemove": "Failed to remove user",
+        "failedToCancel": "Failed to cancel invitation",
+        "cannotDeleteSelf": "You cannot delete your own account",
+        "cannotDeleteLastOwner": "Cannot delete the last owner of the account"
+      },
+      "confirmations": {
+        "removeUser": "Are you sure you want to remove this user?",
+        "cancelInvitation": "Are you sure you want to cancel this invitation?"
+      }
+    },
     "plans": {
       "title": "Plans & Pricing",
       "subtitle": "Manage your subscription and view available plans",
