--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -749,6 +749,60 @@
       "saveSuccess": "Configuración guardada exitosamente",
       "saveError": "Error al guardar la configuración"
     },
+    "users": {
+      "title": "Gestión de Usuarios",
+      "subtitle": "Gestiona miembros del equipo e invitaciones",
+      "teamMembers": "Miembros del Equipo",
+      "activeUsers": "Usuarios Activos",
+      "pendingInvitations": "Invitaciones Pendientes",
+      "inviteUser": "Invitar Usuario",
+      "inviteNewUser": "Invitar Nuevo Usuario",
+      "sendInvitation": "Enviar Invitación",
+      "email": "Email",
+      "emailPlaceholder": "usuario@ejemplo.com",
+      "role": "Rol",
+      "roleDescription": "Seleccione el rol para este usuario",
+      "roles": {
+        "viewer": "Visualizador - Acceso de solo lectura",
+        "editor": "Editor - Puede editar temas",
+        "admin": "Administrador - Puede gestionar la mayoría de configuraciones",
+        "owner": "Propietario - Acceso total"
+      },
+      "slotsRemaining": "espacios restantes",
+      "slotRemaining": "espacio restante",
+      "user": "Usuario",
+      "joined": "Se Unió",
+      "lastLogin": "Último Acceso",
+      "actions": "Acciones",
+      "removeUser": "Eliminar usuario",
+      "cancelInvitation": "Cancelar invitación",
+      "resendInvitation": "Reenviar invitación",
+      "status": "Estado",
+      "expires": "Expira",
+      "noUsers": "No se encontraron usuarios",
+      "noInvitations": "No hay invitaciones pendientes",
+      "invitationSent": "Invitación enviada exitosamente",
+      "invitationResent": "Invitación reenviada exitosamente",
+      "userRemoved": "Usuario eliminado exitosamente",
+      "invitationCancelled": "Invitación cancelada exitosamente",
+      "errors": {
+        "insufficientPermissions": "Permisos insuficientes",
+        "userLimitReached": "Límite de usuarios alcanzado",
+        "emailAlreadyExists": "El email ya existe",
+        "invalidEmail": "Formato de email inválido",
+        "invalidRole": "Rol inválido",
+        "failedToInvite": "Error al enviar invitación",
+        "failedToResend": "Error al reenviar invitación",
+        "failedToRemove": "Error al eliminar usuario",
+        "failedToCancel": "Error al cancelar invitación",
+        "cannotDeleteSelf": "No puedes eliminar tu propia cuenta",
+        "cannotDeleteLastOwner": "No se puede eliminar el último propietario de la cuenta"
+      },
+      "confirmations": {
+        "removeUser": "¿Está seguro de que desea eliminar este usuario?",
+        "cancelInvitation": "¿Está seguro de que desea cancelar esta invitación?"
+      }
+    },
     "integrations": {
       "title": "Integraciones",
       "subtitle": "Gestiona las claves de API para integraciones",
