--- a/src/i18n/messages/pt-BR.json
+++ b/src/i18n/messages/pt-BR.json
@@ -749,6 +749,60 @@
       "saveSuccess": "Configurações salvas com sucesso",
       "saveError": "Falha ao salvar configurações"
     },
+    "users": {
+      "title": "Gerenciamento de Usuários",
+      "subtitle": "Gerencie membros da equipe e convites",
+      "teamMembers": "Membros da Equipe",
+      "activeUsers": "Usuários Ativos",
+      "pendingInvitations": "Convites Pendentes",
+      "inviteUser": "Convidar Usuário",
+      "inviteNewUser": "Convidar Novo Usuário",
+      "sendInvitation": "Enviar Convite",
+      "email": "Email",
+      "emailPlaceholder": "usuario@exemplo.com",
+      "role": "Cargo",
+      "roleDescription": "Selecione o cargo para este usuário",
+      "roles": {
+        "viewer": "Visualizador - Acesso somente leitura",
+        "editor": "Editor - Pode editar temas",
+        "admin": "Administrador - Pode gerenciar a maioria das configurações",
+        "owner": "Proprietário - Acesso total"
+      },
+      "slotsRemaining": "vagas restantes",
+      "slotRemaining": "vaga restante",
+      "user": "Usuário",
+      "joined": "Entrou",
+      "lastLogin": "Último Acesso",
+      "actions": "Ações",
+      "removeUser": "Remover usuário",
+      "cancelInvitation": "Cancelar convite",
+      "resendInvitation": "Reenviar convite",
+      "status": "Status",
+      "expires": "Expira",
+      "noUsers": "Nenhum usuário encontrado",
+      "noInvitations": "Nenhum convite pendente",
+      "invitationSent": "Convite enviado com sucesso",
+      "invitationResent": "Convite reenviado com sucesso",
+      "userRemoved": "Usuário removido com sucesso",
+      "invitationCancelled": "Convite cancelado com sucesso",
+      "errors": {
+        "insufficientPermissions": "Permissões insuficientes",
+        "userLimitReached": "Limite de usuários atingido",
+        "emailAlreadyExists": "Email já existe",
+        "invalidEmail": "Formato de email inválido",
+        "invalidRole": "Cargo inválido",
+        "failedToInvite": "Falha ao enviar convite",
+        "failedToResend": "Falha ao reenviar convite",
+        "failedToRemove": "Falha ao remover usuário",
+        "failedToCancel": "Falha ao cancelar convite",
+        "cannotDeleteSelf": "Você não pode excluir sua própria conta",
+        "cannotDeleteLastOwner": "Não é possível excluir o último proprietário da conta"
+      },
+      "confirmations": {
+        "removeUser": "Tem certeza de que deseja remover este usuário?",
+        "cancelInvitation": "Tem certeza de que deseja cancelar este convite?"
+      }
+    },
     "plans": {
       "title": "Planos e Preços",
       "subtitle": "Gerencie sua assinatura e visualize planos disponíveis",
