--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -750,6 +750,10 @@
       "deleteAccount": "Delete Account",
       "deleteAccountDesc": "Permanently delete your account and all associated data. This action cannot be undone.",
       "deleteAccountButton": "Delete My Account",
+      "deleteAccountConfirm": "Delete Account?",
+      "deleteAccountWarning": "Are you sure you want to delete your account? This will cancel all active subscriptions, delete all sessions, and mark your account as cancelled. This action cannot be undone.",
+      "deleteAccountSuccess": "Account deleted successfully. You will be logged out shortly.",
+      "deleteAccountError": "Failed to delete account. Please try again.",
       "deleteAccountComingSoon": "Account deletion coming soon",
       "saveChanges": "Save Changes",
       "saveSuccess": "Settings saved successfully",
