--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -744,6 +744,10 @@
       "deleteAccount": "Eliminar Cuenta",
       "deleteAccountDesc": "Eliminar permanentemente tu cuenta y todos los datos asociados. Esta acción no se puede deshacer.",
       "deleteAccountButton": "Eliminar Mi Cuenta",
+      "deleteAccountConfirm": "¿Eliminar Cuenta?",
+      "deleteAccountWarning": "¿Estás seguro de que deseas eliminar tu cuenta? Esto cancelará todas las suscripciones activas, eliminará todas las sesiones y marcará tu cuenta como cancelada. Esta acción no se puede deshacer.",
+      "deleteAccountSuccess": "Cuenta eliminada exitosamente. Serás desconectado en breve.",
+      "deleteAccountError": "Error al eliminar la cuenta. Por favor, inténtalo de nuevo.",
       "deleteAccountComingSoon": "Eliminación de cuenta próximamente",
       "saveChanges": "Guardar Cambios",
       "saveSuccess": "Configuración guardada exitosamente",
