--- a/src/i18n/messages/pt-BR.json
+++ b/src/i18n/messages/pt-BR.json
@@ -744,6 +744,10 @@
       "deleteAccount": "Excluir Conta",
       "deleteAccountDesc": "Excluir permanentemente sua conta e todos os dados associados. Esta ação não pode ser desfeita.",
       "deleteAccountButton": "Excluir Minha Conta",
+      "deleteAccountConfirm": "Excluir Conta?",
+      "deleteAccountWarning": "Tem certeza de que deseja excluir sua conta? Isso cancelará todas as assinaturas ativas, excluirá todas as sessões e marcará sua conta como cancelada. Esta ação não pode ser desfeita.",
+      "deleteAccountSuccess": "Conta excluída com sucesso. Você será desconectado em breve.",
+      "deleteAccountError": "Falha ao excluir conta. Por favor, tente novamente.",
       "deleteAccountComingSoon": "Exclusão de conta em breve",
       "saveChanges": "Salvar Alterações",
       "saveSuccess": "Configurações salvas com sucesso",
